--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,94 +1,93 @@
 trigger:
   branches:
     include:
-    - master
+      - master
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '12.x'
+  - task: NodeTool@0
+    inputs:
+      versionSpec: "12.x"
 
-- task: Npm@1
-  displayName: 'NPM: Install Extension Dependencies'
-  inputs:
-    workingDir: .
-    verbose: false
+  - task: Npm@1
+    displayName: "NPM: Install Extension Dependencies"
+    inputs:
+      workingDir: .
+      verbose: false
 
-- task: Npm@1
-  displayName: 'NPM: Build Extension'
-  inputs:
-    command: custom
-    workingDir: .
-    verbose: false
-    customCommand: 'run build'
+  - task: Npm@1
+    displayName: "NPM: Build Extension"
+    inputs:
+      command: custom
+      workingDir: .
+      verbose: false
+      customCommand: "run build"
 
-- task: Npm@1
-  displayName: 'NPM: Install Task Dependencies'
-  inputs:
-    workingDir: tasks/UploadPostmanHtmlReport
-    verbose: false
+  - task: Npm@1
+    displayName: "NPM: Install Task Dependencies"
+    inputs:
+      workingDir: tasks/UploadPortalHtmlReport
+      verbose: false
 
-- task: PackageAzureDevOpsExtension@2
-  displayName: 'TFX: Package Extension'
-  inputs:
-    rootFolder: .
-    publisherId: MaciejMaciejewski
-    extensionName: 'Postman Report'
-    extensionVisibility: public
-    extensionPricing: free
-    patternManifest: 'azure-devops-extension.json'
-  condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'))
+  - task: PackageAzureDevOpsExtension@2
+    displayName: "TFX: Package Extension"
+    inputs:
+      rootFolder: .
+      publisherId: joneja09
+      extensionName: "Portal Report"
+      extensionVisibility: public
+      extensionPricing: free
+      patternManifest: "azure-devops-extension.json"
+    condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'))
 
-- task: PackageAzureDevOpsExtension@2
-  displayName: 'TFX: Package Extension Dev'
-  inputs:
-    rootFolder: .
-    publisherId: MaciejMaciejewski
-    extensionId: 'azure-pipelines-postman'
-    extensionTag: dev
-    extensionName: 'Postman Report Dev'
-    extensionVersion: '1.0.$(Build.BuildId)'
-    updateTasksVersion: true
-    extensionVisibility: private
-    extensionPricing: free
-    patternManifest: 'azure-devops-extension.json'
-  condition: and(succeeded(), ne(variables['Build.SourceBranchName'], 'master'))
+  - task: PackageAzureDevOpsExtension@2
+    displayName: "TFX: Package Extension Dev"
+    inputs:
+      rootFolder: .
+      publisherId: joneja09
+      extensionId: "azure-pipelines-portal"
+      extensionTag: dev
+      extensionName: "Portal Report Dev"
+      extensionVersion: "1.0.$(Build.BuildId)"
+      updateTasksVersion: true
+      extensionVisibility: private
+      extensionPricing: free
+      patternManifest: "azure-devops-extension.json"
+    condition: and(succeeded(), ne(variables['Build.SourceBranchName'], 'master'))
 
-- task: PublishAzureDevOpsExtension@2
-  displayName: 'TFX: Publish Extension Dev'
-  inputs:
-    connectedServiceName: Marketplace
-    rootFolder: .
-    publisherId: MaciejMaciejewski
-    extensionId: 'azure-pipelines-postman'
-    extensionTag: dev
-    extensionName: 'Postman Report Dev'
-    extensionVersion: '1.0.$(Build.BuildId)'
-    extensionVisibility: private
-    extensionPricing: free
-    patternManifest: 'azure-devops-extension.json'
-  condition: and(succeeded(), ne(variables['Build.SourceBranchName'], 'master'))
+  - task: PublishAzureDevOpsExtension@2
+    displayName: "TFX: Publish Extension Dev"
+    inputs:
+      connectedServiceName: Marketplace
+      rootFolder: .
+      publisherId: joneja09
+      extensionId: "azure-pipelines-portal"
+      extensionTag: dev
+      extensionName: "Portal Report Dev"
+      extensionVersion: "1.0.$(Build.BuildId)"
+      extensionVisibility: private
+      extensionPricing: free
+      patternManifest: "azure-devops-extension.json"
+    condition: and(succeeded(), ne(variables['Build.SourceBranchName'], 'master'))
 
-- task: ShareAzureDevOpsExtension@2
-  displayName: 'TFX: Share Extension'
-  inputs:
-    connectedServiceName: Marketplace
-    method: vsix
-    vsixFile: '**.vsix'
-    accounts: 'maciejmaciejewski-dev'
-  condition: and(succeeded(), ne(variables['Build.SourceBranchName'], 'master'))
+  - task: ShareAzureDevOpsExtension@2
+    displayName: "TFX: Share Extension"
+    inputs:
+      connectedServiceName: Marketplace
+      method: vsix
+      vsixFile: "**.vsix"
+      accounts: "kbxltrans"
+    condition: and(succeeded(), ne(variables['Build.SourceBranchName'], 'master'))
 
-- task: CopyFiles@2
-  displayName: 'Copy Files'
-  inputs:
-    SourceFolder: '$(System.DefaultWorkingDirectory)'
-    Contents: '**.vsix'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)/results'
-  condition: succeededOrFailed()
+  - task: CopyFiles@2
+    displayName: "Copy Files"
+    inputs:
+      SourceFolder: "$(System.DefaultWorkingDirectory)"
+      Contents: "**.vsix"
+      TargetFolder: "$(Build.ArtifactStagingDirectory)/results"
+    condition: succeededOrFailed()
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact'
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)/results'
-  condition: succeededOrFailed()
-
+  - task: PublishBuildArtifacts@1
+    displayName: "Publish Artifact"
+    inputs:
+      PathtoPublish: "$(Build.ArtifactStagingDirectory)/results"
+    condition: succeededOrFailed()
