--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "azure-pipelines-postman",
+  "name": "azure-pipelines-html-portal",
   "version": "1.1.3",
-  "description": "Embed HTML REports into build and release tab",
+  "description": "Embed HTML Reports into build and release tab",
   "main": "index.js",
   "scripts": {
     "clean": "rimraf ./dist",
@@ -15,7 +15,7 @@
     "Azure",
     "DevOps"
   ],
-  "author": "Maciej Maciejewski <maciej.maciejewski@finastra.com>",
+  "author": "Jeff Jones <jeffery.jonesjr12@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/joneja09/azure-pipelines-html-viewer/issues"
@@ -31,7 +31,7 @@
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
     "jsdom": "^16.2.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "^7.0.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
