--- a/tasks/UploadPortalHtmlReport/package.json
+++ b/tasks/UploadPortalHtmlReport/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uploadpostmanhtmlreport",
+  "name": "uploadportalhtmlreport",
   "version": "1.1.3",
   "description": "",
   "main": "index.js",
